@@ -5,7 +5,7 @@ $disp_field
 $groupList
 $state
 </%args>
-<form action="<% $r->uri %>" method="post">
+<form action="<% $r->uri %>" method="post" id="searchbox">
 <& '/widgets/wrappers/sharky/table_top.mc',
               caption => $lang->maketext('Search'),
               search  => 1,
